objects/Contact_Study_Junction__c.object
<CustomObject>
    <description>This object is created as a Junction Object for Contact and Study.</description>
    <fields>
        <fullName>Compound_Key__c</fullName>
        <description>Combination of Contact and Study</description>
        <label>Compound Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contact_Study_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Studies__c</fullName>
        <label>Studies</label>
        <referenceTo>Studies__c</referenceTo>
        <relationshipLabel>Contacts Studies</relationshipLabel>
        <relationshipName>Contact_Study_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contact Study</label>
    <nameField>
        <displayFormat>CSJ-{0000}</displayFormat>
        <label>Contact Study ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts Studies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>